more refactoring around margins and distances